grammar.js
    source_file: $ =>
      prec.left(
        repeat(
          choice(
            $.package,
            $.fragment,
            $._dollar,
          ),
        ),
      ),

    _line_terminator: $ => seq(optional('\r'), '\n'),

    fragment: $ =>
      prec.left(seq(repeat1(seq($._top_level_statement, $._line_terminator)), optional($._dollar))),

    _dollar: $ => token(seq('$', optional('\r'), '\n')),

    block: $ =>
      prec.left(
        seq(alias(/_block/i, '_block'), optional($.label), optional($._codeblock), alias(/_endblock/i, '_endblock')),
      ),

    assignment: $ =>
      prec.left(PREC.ASSIGN,
        seq($._expression,
          choice('<<', '^<<', '_and<<', '_andif<<', '_or<<', '_orif<<', '_xor<<', '**<<', '**^<<', '*<<', '*^<<', '/<<', '/^<<', '_mod<<', '_div<<', '-<<', '-^<<', '+<<', '+^<<'),
          $._expression),
      ),

    // _if <condition1>
    // _then
    //  <block body>
    // [ _elif <condition2>
    //   _then
    //     <block body> ]
    //     ...
    // [ _else
    //   <block body> ]
    // _endif
    if: $ =>
      seq(alias(/_if/i, '_if'),
        field('condition', $._expression),
        alias(/_then/i, '_then'),
        optional($._codeblock),
        repeat($.elif),
        optional($.else),
        alias(/_endif/i, '_endif'),
      ),

    elif: $ => seq(alias(/_elif/i, '_elif'), field('condition', $._expression), alias(/_then/i, '_then'), optional($._codeblock)),

    else: $ => seq(alias(/_else/i, '_else'), optional($._codeblock)),

    // _loop [ @ <identifier> ]
    //  <block body>
    // _endloop
    loop: $ =>
      seq(
        alias(/_loop/i, '_loop'),
        optional($.label),
        optional($._codeblock),
        alias(/_endloop/i, '_endloop'),
      ),

    // [ _finally [ _with <lvalue tuple> ]
    //  <block body> ]
    finally: $ => seq(alias(/_finally/i, '_finally'), optional(seq(alias(/_with/i, '_with'), $._identifier_list)), optional($._codeblock)),

    // _handling condition _with procedure
    catch: $ => seq(alias(/_catch/i, '_catch'), $._expression, $._terminator, optional($._codeblock), alias(/_endcatch/i, '_endcatch')),

    // _throw <expression> [ _with <rvalue tuple> ]
    iterator: $ =>
      seq(
        optional(seq(alias(/_for/i, '_for'), $._identifier_list)),
        alias(/_over/i, '_over'), $._expression,
        seq(
          alias(/_loop/i, '_loop'),
          optional($.label),
          optional($._codeblock),
          optional($.finally),
          alias(/_endloop/i, '_endloop')),
      ),

    // _while <condition>
    // _loop [ @<identifier> ]
    //  <block body>
    // _endloop
    while: $ =>
      seq(alias(/_while/i, '_while'), field('condition', $._expression),
        seq(
          alias(/_loop/i, '_loop'),
          optional($.label),
          optional($._codeblock),
          alias(/_endloop/i, '_endloop')),
      ),

    // _try [ _with <name list> ]
    //   <block body 0>
    // _when <name list1>
    //   <block body 1>
    // _endtry
    leave: $ =>
      prec.left(seq(
        alias(/_leave/i, '_leave'),
        optional($.label),
        optional(seq(alias(/_with/i, '_with'), choice(
          seq('(', $._expression, ',', $._expression_list, ')'),
          $._expression_list))),
      )),

    // _continue _with <rvalue tuple>
    continue: $ =>
      prec.left(seq(
        alias(/_continue/i, '_continue'),
        optional($.label),
        optional(seq(alias(/_with/i, '_with'), choice(
          seq('(', $._expression, ',', $._expression_list, ')'),
          $._expression_list))),
      )),

    // _protect [ _locking <expression> ]
    //   <block body>
    // _protection
    //   <block body>
    // _endprotect
    character_literal: $ => seq('%', choice(/\p{L}[\p{L}\p{N}]*/u, /./, ' ')),

    string_literal: $ =>
      choice(
        seq('"', repeat(choice(/[^"\n]/, /(.|\n)/)), '"'),
        seq('\'', repeat(choice(/[^'\n]/, /(.|\n)/)), '\''),
      ),

    // /<pattern>/<flags>
    regex_literal: $ => token(/\/.*?\/[qisdlmucx]*/),

    call: $ =>
      prec.right(PREC.CALL,
        seq(
          field('receiver', $._expression),
          field('operator', '.'),
          field('message', $.identifier),
          optional(choice(
            seq('(', optional($._expression_list), ')'),
            seq('<<', optional($._expression_list)))),
        ),
      ),

    _expression_list: $ =>
      prec.right(seq($._expression, optional(choice(
        seq(',', $._expression_list),
        $.scatter,
      )))),

    true: $ => alias(/_true/i, '_true'),
    false: $ => alias(/_false/i, '_false'),
    maybe: $ => alias(/_maybe/i, '_maybe'),
    unset: $ => alias(/_unset/i, '_unset'),
    self: $ => alias(/_self/i, '_self'),
    _terminator: $ =>
      choice(';', $._line_terminator),

    _top_level_statement: $ => choice(
      $._definition,
      $._method_declaration,
      $._expression,
      $._global_assignment,
    ),

    _expression: $ => choice(
      $.handling,
      $.return,
      $.leave,
      $.continue,
      $.catch,
      $.throw,
      $.primitive,
      $.block,
      $.iterator,
      $.while,
      $.if,
      $.loop,
      $.try,
      $.loopbody,
      $.protect,
      $.lock,
      choice(
        $.parenthesized_expression,
        $.call,
        $.procedure,
        $.invoke,
        $.slot_accessor,
        $.indexed_access,
        $.gather,
        $.scatter,
        $.allresults,
        $.class,
        $.assignment,
        $.logical_operator,
        $.relational_operator,
        $.arithmetic_operator,
        $.unary_operator,
        $._literal,
        $._variable,
      ),
    ),

    _codeblock: $ => seq(
      choice($._expression, $._defvar),
      repeat(seq($._terminator, choice($._expression, $._defvar))),
      optional($._terminator)),

    return: $ =>
      prec.right(
        choice(
          seq(alias(/_return/i, '_return'), optional($._expression_list)),
          seq('>>', $._expression_list),
        ),
      ),

    scatter: $ => seq(alias(/_scatter/i, '_scatter'), $._expression),
    parenthesized_expression: $ => seq('(', $._expression_list, ')'),

    label: $ =>
      /@\s?(\|[\p{L}\p{N}_?.!]*\||[\p{L}\p{N}_?!]+)+/u,

    number: $ => token(
      choice(
        seq(
          choice(/\p{N}+/u, /\p{N}+\.\p{N}+/u),
          optional(seq(/[eE&][+-]?/, /\p{N}+/u))),
        /(?:[2-9]|[1-2]\d|3[0-6])[rR][a-zA-Z0-9]+/)),

    variable: $ => prec.left($._identifier),

    global_reference: $ => token(seq('@', optional(seq(ID_REGEX, ':')), ID_REGEX)),

    identifier: $ => $._identifier,

    _identifier: $ => ID_REGEX,

    _identifier_list: $ =>
      prec.right(seq($.identifier, repeat(seq(',', $.identifier)))),

    vector: $ => seq(
      '{',
      optional($._expression_list),
      '}',
    ),

    relational_operator: $ =>
      prec.right(PREC.RELATIONAL,
        seq(
          field('left', $._expression),
          field('operator', choice(alias(/_is/i, '_is'), alias(/_isnt/i, '_isnt'), alias(/_cf/i, '_cf'), '=', '~=', '<>', '>=', '<=', '<', '>')),
          field('right', $._expression),
        ),
      ),

    logical_operator: $ =>
      prec.left(PREC.BOOLEAN,
        seq(
          field('left', $._expression),
          field('operator', choice(alias(/_and/i, '_and'), alias(/_or/i, '_or'), alias(/_xor/i, '_xor'), alias(/_andif/i, '_andif'), alias(/_orif/i, '_orif'))),
          field('right', $._expression),
        ),
      ),

    unary_operator: $ =>
      prec.right(seq(field('operator', choice('+', '-', alias(/_not/i, '_not'), '~')), $._expression)),

    symbol: $ => /:(\|[^|]*\||\\.|[\p{L}\p{N}_?!]+)+/u,
