test/corpus/catch.txt
================================================================================
catch
================================================================================

_catch :error
_endcatch
$

_catch @error
_endcatch
$

_catch "error"
_endcatch
$

_catch >> _true _endcatch
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (catch
      (symbol)))
  (fragment
    (catch
      (global_reference)))
  (fragment
    (catch
      (string_literal))))
